# decoupler-py

./: .pdm-python  pyproject.toml  ruff.toml
docs/source/notebooks/: benchmark.ipynb  bulk.ipynb  pseudobulk.ipynb
src/decoupler/: __init__.py  _misc.py  benchmark.py  consensus.py  decouple.py  method_aucell.py  method_gsea.py  method_gsva.py  method_mdt.py  method_mlm.py  method_ora.py  method_udt.py  method_ulm.py  method_viper.py  method_wmean.py  method_wsum.py  method_zscore.py  metrics.py  omnip.py  plotting.py  pre.py  utils.py  utils_anndata.py  utils_benchmark.py
tests/: test_aucell.py  test_benchmark.py  test_consensus.py  test_decouple.py  test_gsea.py  test_gsva.py  test_mdt.py  test_metrics.py  test_mlm.py  test_omnip.py  test_ora.py  test_plotting.py  test_pre.py  test_udt.py  test_ulm.py  test_utils.py  test_utilsanndata.py  test_utilsbenchmark.py  test_viper.py  test_wmean.py  test_wsum.py  test_zscore.py
