[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "decoupler"
version = "1.9.0"
description = "Ensemble of methods to infer biological activities from omics data"
authors = [
    {name = "Pau Badia i Mompel", email = "pau.badia@uni-heidelberg.de"},
]
dependencies = [
    "tqdm>=4.67",
    "numba<1.0.0,>=0.60.0",
    "numpy>=2.0.0",
    "pandas<3.0.0,>=2.2.2",
    "statsmodels<1.0.0,>=0.14.4",
    "omnipath @ git+https://github.com/saezlab/omnipath",
    "pypath-omnipath<1.0.0,>=0.16.17",
    "scikit-learn<2.0.0,>=1.6.0",
    "igraph<1.0.0,>=0.11.8",
    "adjusttext<2.0.0,>=1.3.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "gpl-3.0-only"}

[project.urls]
"Bug Tracker" = "https://github.com/saezlab/decoupler-py/issues"
homepage = "https://decoupler.readthedocs.io/"
repository = "https://github.com/saezlab/decoupler-py"
documentation = "https://decoupler.readthedocs.io/"

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
testpaths = ["tests/",]
xfail_strict = true
addopts = [
    # "-Werror",  # if 3rd party libs raise DeprecationWarnings, just use filterwarnings below
    "--import-mode=importlib",  # allow using test files with same name
]
filterwarnings = [
    # "ignore:.*U.*mode is deprecated:DeprecationWarning",
    "ignore::UserWarning",
    "ignore::DeprecationWarning:.*(jupyter_client).*",
]
[dependency-groups]
dev = [
    "pytest>=6.0",
    "bump2version",
    "pytest-cov<6.0.0,>=5.0.0",
    "scanpy<2.0.0,>=1.10.1",
    "psutil<6.0.0,>=5.9.8",
    "sphinx<8.0.0,>=7.3.7",
    "nbsphinx<1.0.0,>=0.9.4",
    "ruff<1.0.0,>=0.8.4",
    "pytest-xdist[psutil]>=3.6.1",
]
